--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.2.1",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "helmet": "^8.1.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "nodemon": "^3.1.10"
