--- a/package.json
+++ b/package.json
@@ -26,5 +26,11 @@
     "mongodb": "^6.18.0",
     "mongoose": "^8.17.2",
     "nodemon": "^3.1.10"
-  }
+  },
+  "devDependencies": {},
+  "keywords": [
+    "nodejs",
+    "mongodb",
+    "express"
+  ]
 }
